syntax = "proto3";

option java_package = "com.flexport.oteldemo.api";
option java_outer_classname = "AddressApiProto";
option java_multiple_files = true;

import "com/flexport/oteldemo/api/address.proto";

service AddressApi {
    rpc GetAddresses(GetAddressesRequest) returns (GetAddressesResponse);
}

message GetAddressesRequest {
    string user_id = 1;
}

message GetAddressesResponse {
    repeated Address addresses = 1;
}
